--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,15 +3,19 @@
 @tailwind utilities;
 
 body {
-	background-color: #ffffff;
+	background-color: #f9f9f9;
 }
 
-div:has(> .router-link-exact-active):not(#logo) {
-	color: #da292a;
+.dark body {
+	background-color: #121216;
+}
+
+aside div:has(> .router-link-exact-active):not(#logo) {
+	color: #ca2a36;
 	background-color: #ccc;
-	border-left: 5px solid #da292a;
+	border-left: 5px solid #ca2a36;
 }
 
-.dark div:has(> .router-link-exact-active):not(#logo) {
+.dark aside div:has(> .router-link-exact-active):not(#logo) {
 	background-color: #141418;
 }
