--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,20 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: MabryPro;
+	src: url(./fonts/MabryPro-Regular.ttf) format('truetype');
+}
+
 body {
 	background-color: #f9f9f9;
+	color: #444;
 }
 
 .dark body {
 	background-color: #121216;
+	color: #f3f3f3;
 }
 
 aside div:has(> .router-link-exact-active):not(#logo) {
 	color: #ca2a36;
 	background-color: #ccc;
 	border-left: 5px solid #ca2a36;
+
+	@media not all and (min-width: 1024px) {
+		border-top: 3px solid #ca2a36;
+		border-left: none;
+	}
 }
 
 .dark aside div:has(> .router-link-exact-active):not(#logo) {
 	background-color: #141418;
+}
+
+#navbar li button:has(> .router-link-exact-active) {
+	font-style: bold;
+	font-weight: 600;
+	border-bottom-width: 3px;
+	border-bottom-color: #ef5465;
 }
