--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,12 +19,12 @@ body {
 
 aside div:has(> .router-link-exact-active):not(#logo) {
 	color: #ca2a36;
-	background-color: #ccc;
+	background-color: rgba(204, 204, 204, 0.3);
 	border-left: 5px solid #ca2a36;
 }
 
 .dark aside div:has(> .router-link-exact-active):not(#logo) {
-	background-color: #141418;
+	background-color: rgba(20, 20, 24, 0.5);
 }
 
 #navbar li button:has(> .router-link-exact-active) {
