--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,9 +18,9 @@ body {
 }
 
 aside div:has(> .router-link-exact-active):not(#logo) {
-	color: #ca2a36;
+	color: #e4062f;
 	background-color: rgba(204, 204, 204, 0.3);
-	border-left: 5px solid #ca2a36;
+	border-left: 5px solid #e4062f;
 }
 
 .dark aside div:has(> .router-link-exact-active):not(#logo) {
